@@ -1,5 +1,7 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Fixed bug: gradient backgrounds would fail if images/cache is not
+   writable due to bug in PHP's is_writeable function.
  - Fixed bug [ Help / Troubleshooting] Help needed getting Webcalendar to work
  - Fixed bug [ 1610640 ] changing option-description of 'advanced search' for a
  - Fixed bug [ 1615563 ] user can remove his own admin-permisssions
